--- a/foot/themes/catppuccin-frappe.ini
+++ b/foot/themes/catppuccin-frappe.ini
@@ -1,7 +1,6 @@
-
-font=monospace:size=12
+font=monospace:size=16
 [colors]
-cursor=232634 f2d5cf
+#cursor=232634 f2d5cf
 foreground=c6d0f5
 background=303446
 
