--- a/QtProject.conf
+++ b/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///home/tth/projects/ProGym/docs/SDLC, file:///home/tth/NOTES/SDLC, file:///home/tth/Downloads, file:///home/tth, file:///home/tth/freecad-learn
-lastVisited=file:///home/tth/freecad-learn/Unnamed.FCStd
-qtVersion=6.10.1
-shortcuts=file:///home/tth/Desktop, file:///home/tth/Documents, file:///home/tth/Downloads, file:///home/tth, file:///home/tth/Pictures, file:///home/tth/freecad-learn
+history=file:///home/tth/NOTES/SDLC, file:///home/tth/Downloads, file:///home/tth, file:///home/tth/freecad-learn, file:///run/media/tth/2109670f-8fde-4bb7-8b31-44feff171a19/freecad-learn
+lastVisited=file:///run/media/tth/2109670f-8fde-4bb7-8b31-44feff171a19/freecad-learn
+qtVersion=6.10.2
+shortcuts=file:///home/tth/Desktop, file:///home/tth/Documents, file:///home/tth/Downloads, file:///home/tth, file:///home/tth/Pictures, file:///run/media/tth/2109670f-8fde-4bb7-8b31-44feff171a19/freecad-learn
 sidebarWidth=95
 treeViewHeader="@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xcf\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xf5\0\0\0\x1\0\0\0\0\0\0\0\x38\0\0\0\x1\0\0\0\0\0\0\0=\0\0\0\x1\0\0\0\0\0\0\0\x65\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1)"
 viewMode=Detail
