--- a/sway/config
+++ b/sway/config
@@ -7,6 +7,13 @@
 ### Variables
 #
 # Logo key. Use Mod1 for Alt.
+exec --no-startup-id export XDG_SESSION_TYPE=wayland
+exec --no-startup-id export XDG_SESSION_DESKTOP=sway
+exec --no-startup-id export XDG_CURRENT_DESKTOP=sway
+exec --no-startup-id export MOZ_ENABLE_WAYLAND=1
+exec --no-startup-id export QT_QPA_PLATFORM=wayland
+exec --no-startup-id export SDL_VIDEODRIVER=wayland
+exec --no-startup-id export _JAVA_AWT_WM_NONREPARENTING=1
 exec --no-startup-id nm-applet
 exec --no-startup-id export QT_QPA_PLATFORM=wayland qpaeq
 exec --no-startup-id "foot --server"
@@ -18,6 +25,12 @@ exec --no-startup-id SDL_IM_MODULE = "fcitx";
 exec --no-startup-id GLFW_IM_MODULE = "fcitx";
 exec --no-startup-id INPUT_METHOD = "fcitx"; 
 exec --no-startup-id fcitx5
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id dex --autostart --environment sway
+
+
+
+
 
 set $mod Mod4
 # Home row direction keys, like vim
